apps/rhf-mui-docs/src/app/v4/components/mui/RHFAutocompleteObject/page.mdx
import { DocsPage, PropsTable, Callout, ComponentSourceLink } from '@/components/docs';
import { componentMetadata, componentProps } from '@/constants';

export const metadata = componentMetadata.RHFAutocompleteObject;

export default function Layout({ children }) {
  return <DocsPage>{children}</DocsPage>;
}

# RHFAutocompleteObject

**RHFAutocompleteObject** extends [Autocomplete](https://v7.mui.com/material-ui/react-autocomplete/)
and is designed for cases where you need to work with the **entire selected option object**
instead of just a primitive value.

Unlike **RHFAutocomplete**, which stores only the value derived from `valueKey`, this
component stores and returns the **full option object (or array of objects)**. This is
particularly useful when additional metadata from the selected option is required
elsewhere in your form or application.

## Key Differences

| Feature | RHFAutocomplete | RHFAutocompleteObject |
|--------|----------------|----------------------|
| Stored value | `string` / `string[]` | `object` / `object[]` |
| Requires `labelKey` | Optional | Required |
| Requires `valueKey` | Optional | Required |
| Use case | Simple forms | Metadata-driven forms |
| Custom values (`freeSolo`) | Users can enter values not present in `options` | Not supported |

## Usage

```tsx
import RHFAutocompleteObject, { RHFAutocompleteObjectProps } from '@nish1896/rhf-mui-components/mui/autocomplete-object';

<RHFAutocompleteObject
  fieldName="country"
  control={control}
  options={countryList}
  labelKey="name"
  valueKey="code"
  multiple           // omit this prop for single selection
/>
```

<Callout type="warning">
  Both `labelKey` and `valueKey` props are mandatory. Since this component works
  exclusively with object-based options, omitting either will result in an error.
</Callout>

<Callout type="note">
  `freeSolo` is **not supported** in `RHFAutocompleteObject`.

  This component stores complete option objects in form state, whereas enabling
  `freeSolo` would introduce string values alongside option objects, resulting in
  mixed value types.

  If you need users to enter custom values that are not present in the provided
  options, use **RHFAutocomplete** or **RHFMultiAutocomplete** instead.
</Callout>

### Example Option Structure

```js
const countryList = [
  { name: 'India', code: 'IN', currency: 'INR' },
  { name: 'Canada', code: 'CA', currency: 'CAD' },
  { name: 'Germany', code: 'DE', currency: 'EUR' }
];
```

**Stored Value**

```js
// Single
{ name: 'India', code: 'IN', currency: 'INR' },

// Multiple
[
  { name: 'India', code: 'IN', currency: 'INR' },
  { name: 'Canada', code: 'CA', currency: 'CAD' }
]
```

## When to Use

Use RHFAutocompleteObject when:
- You need access to additional fields from the selected option (e.g. currency, id, etc.)
- You want to avoid mapping IDs back to objects
- Your form logic depends on rich object data
- You are working with APIs that expect full objects instead of IDs

## Examples
- [Autocomplete Variations](https://v7.mui.com/material-ui/react-autocomplete/#playground)

## API
The `RHFAutocompleteObjectProps` interface extends [AutocompleteProps](https://v7.mui.com/material-ui/api/autocomplete/)
and accepts the following additional props.
Props marked with <strong style={{ color: 'var(--mui-palette-error-main)' }}>{'*'}</strong> are required.

<PropsTable
  rows={componentProps.RHFAutocompleteObject}
  docsVersion={4}
  muiVersion={7}
  v4AndAbove
/>

## Source Code

<ComponentSourceLink
  path="mui/autocomplete-object"
  docsVersion={4}
/>
